fix: set minus z-index for not hided popup

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -973,7 +973,7 @@ body {
   top: calc(50% - 300px);
   left: calc(50% - 225px);
   transition: 1s;
-  z-index: 100;
+  z-index: -10;
   opacity: 0;
   visibility: hidden;
 }
@@ -981,6 +981,7 @@ body {
 .show-popup {
   opacity: 1;
   visibility: visible;
+  z-index: 100;
 }
 
 .popup-close {
